# cexchange

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: flawfinder-analysis.yml
config/: server_config.json
src/: README  async_ssl_bitstamp_allsteps.cpp  bitstamp.cpp  bitstamp_multi.cpp  makefile  simple_example.cpp  wsapi.cpp  wsapi.hpp
src/c++/: config.hpp  makefile  wsapi.cpp  wsapi.hpp
src/c++/archive/: makefile
src/c++/examples/: bitstamp_multi.cpp  config.cpp  config.hpp  config_test.cpp  general_listener.cpp  makefile  simple_example.cpp
src/c++/ws/: wsapi.cpp  wsapi.hpp
src/python/: bitstamp.py  gdax.py  linalg.py  pnl_calc.py  polo.py  time_utils.py
src/webserver_experiments/: README.md
src/webserver_experiments/c++/: boost_examples.cpp  makefile  run
src/webserver_experiments/nodejs-http/: app.js  index.html  markets.html  package-lock.json  package.json  testws.html  tsconfig.json
src/webserver_experiments/nodejs-https-nginx/: README  nginx-config  server.js
